Hotfix: Renamed Main class to RunGame

--- a/cruisin-asu/cruisin-asu.csproj
+++ b/cruisin-asu/cruisin-asu.csproj
@@ -93,8 +93,8 @@
     <Compile Include="Map\Layer.cs" />
     <Compile Include="Map\Map.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="RunGame.cs" />
+    <Compile Include="Game.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
