--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,46 @@
-cruisin-asu/bin
-cruisin-asu/obj
-cruisin-asu/obj/*
-cruisin-asu/bin/*
-[Bb]in/
-[Oo]bj/
-[Bb]in/*
-[Oo]bj/*
-!/lib
+#OS junk files
+[Tt]humbs.db
+*.DS_Store
+
+#Visual Studio files
+*.[Oo]bj
+*.exe
+*.pdb
 *.user
-*.suo
-_ReSharper.*
-*.sln.cache
-*.xap
-*.vspcc
-*.vscc
+*.aps
+*.pch
+*.vspscc
 *.vssscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.[Cc]ache
+*.ilk
+*.log
+*.lib
+*.sbr
+*.sdf
+ipch/
+obj/
+[Bb]in
+[Dd]ebug*/
+[Rr]elease*/
+Ankh.NoLoad
+
+#Tooling
+_ReSharper*/
+*.resharper
+[Tt]est[Rr]esult*
+
+#Project files
+[Bb]uild/
+
+#Subversion files
+.svn
+
+# Office Temp Files
+~$*
